# BetterSEQTA-Plus

./: .dependency-cruiser.cjs  .env  .env.example  .env.submit.example  .eslintrc.json  .gitignore  .parcelrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING,md  CONTRIBUTING.md  Cargo.toml  LICENSE  Push Procedure.txt  README.md  SECURITY.md  bun.lockb  contributing.md  index.html  jest.config.js  main.py  manifest.firefox.json  manifest.json  package-lock.json  package.json  package.sh  plugins.md  pnpm-lock.yaml  postcss.config.cjs  settings.patch  sweep.yaml  tailwind.config.js  tempthemesapi.md  test.sh  text  themes.md  tsconfig.json  vite.config.js  vite.config.ts  vite.config.ts.timestamp-1731648335376-74d7c6bd758ba8.mjs  (+3 more)
.github/: nightly-release-notes.md
.million/: store.json
chrome/: manifest.json
docs/: ARCHITECTURE.md  CLOUD_SETTINGS_SYNC_OPTIONS.md  CLOUD_SETTINGS_SYNC_SERVER.md  GETTING_STARTED_CONTRIBUTING.md  README.md  RELEASES.md  THEME_CREATION.md  TROUBLESHOOTING.md  contributing.md  installation.md
electron/: index.html  main.js
firefox/: manifest.json
interface/: .eslintrc.cjs  .gitignore  bun.lockb  index.html  main.d.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
lib/: base64loader.ts  closePlugin.ts  createManifest.ts  extensionChunkUrls.ts  inlineWorker.ts  (+8 more)
wasm/betterseqta-wasm/: Cargo.toml
wasm/betterseqta-wasm/src/: base64_api.rs  engage.rs  escape.rs  grades.rs  hex_colour.rs  lib.rs  page_context.rs  pdf_weight.rs  seqta.rs  threshold.rs  time_format.rs  timetable_nav.rs  user_agent.rs
(+864 files in other folders)
