[package]
name = "betterseqta-wasm"
version = "0.1.0"
edition = "2021"
authors = ["BetterSEQTA+"]
description = "WebAssembly helpers for the BetterSEQTA+ browser extension"
repository = "https://github.com/BetterSEQTA/BetterSEQTA-Plus"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
base64 = "0.22.1"
percent-encoding = "2.3.1"
regex = "1.11.1"
csscolorparser = "0.7.2"
